src/components/Card/CardProject/style.module.scss
.Card {
  border-radius: 5px;
  border: 1px solid #000;
  background: #1d1d1d;
  padding: 1.25rem;
  margin: 0 10px;

  display: flex;
  justify-content: space-between;
}

.content {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 5rem;
}

.title {
  color: #fff;
  font-size: 1.125rem;
  font-weight: 700;
  text-transform: capitalize;
}

.project {
  color: var(--c6, #a3a3a3);
  font-size: 0.875rem;
  font-weight: 400;
}

.topic {
  padding: 0.5rem 1rem;

  border: 1px solid #a3a3a3;
  border-radius: 4px;
}

.image {
  border-radius: 4px;
}

.topicWrapper {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  justify-content: left;
}

